Added $scope data to the page also added navbar
Added some parts of the event object that is in the $scope of the program. Added some notes to this for future reference.

Also divided things up into bootstrap rows and an image of the angular logo using the ng-src so that we could use the angular `{{}}` notation inside the alt text and image string.

--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -9,8 +9,39 @@
 <body>
     <div class="container">
 
+        <div class="navbar">
+            <div class="navbar-inner">
+                <ul class="nav">
+
+                </ul>
+            </div>
+        </div>
+
         <div ng-controller="EventController">
-            {{event.name}}
+
+            <!--add ing images in angular js-->
+            <img ng-src="{{event.imageUrl}}" alt="{{event.name}}" />
+            <div class="row">
+                <div class="span1">
+                    <h2>{{event.name}}</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="span2">
+                    <div><strong>Date:</strong> {{event.date}}</div>
+                    <div><strong>Time:</strong> {{event.time}}</div>
+                </div>
+
+                <div class="span4">
+                    <address>
+                        <strong>Address:</strong><br />
+                        {{event.location.address}}<br />
+                        {{event.location.city}}
+                        {{event.location.province}}
+                    </address>
+                </div>
+            </div>
         </div>
 
     </div>
