--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -42,6 +42,27 @@
                     </address>
                 </div>
             </div>
+            <hr />
+
+            <h3>Sessions:</h3>
+            <ul class="thumbnails">
+                <!--This is how we handle repeating events in angularjs-->
+                <li ng-repeat="session in event.sessions">
+                    <div class="row session">
+                        <!--Well puts the informaton into a well of depth in the page-->
+                        <div class="well span9">
+                            <h4 class="well-title">
+                                {{session.name}}
+                            </h4>
+                            <h6 style="margin-top:-10px;">{{session.creatorName}}</h6>
+                            <span>Duration: {{session.duration}}</span>
+                            <p>{{session.abstract}}</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+
         </div>
 
     </div>
