Using some of the built in directives
Used directives like ng-click, ng-bind, ng-disabled.

Also added event handelling with some upvoting and downvoting buttons that actually change the data in the controller by calling a function written on the scope.

--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -23,9 +23,12 @@
             <img ng-src="{{event.imageUrl}}" alt="{{event.name}}" />
             <div class="row">
                 <div class="span1">
-                    <h2>{{event.name}}</h2>
+                    <!-- <h2 ng-bind="event.name"></h2> -->
+                    <h2 ng-bind-template="{{event.name}} {{event.date}}"></h2>
                 </div>
             </div>
+            <!--ng-disabled makes this button be greyed out and disabled-->
+            <button class="btn" ng-disabled="buttonDisabled">Disable</button>
 
             <div class="row">
                 <div class="span2">
@@ -49,6 +52,21 @@
                 <!--This is how we handle repeating events in angularjs-->
                 <li ng-repeat="session in event.sessions">
                     <div class="row session">
+                        <div class="span0 well votingWidget">
+                            <!--Upvoting button-->
+                            <div class="votingButton" ng-click="upVoteSession(session)">
+                                <i class="icon-chevron-up icon-white"></i>
+                            </div>
+
+                            <div class="badge badge-inverse">
+                                {{session.upvote}}
+                            </div>
+
+                            <div class="votingButton" ng-click="downVoteSession(session)">
+                                <i class="icon-chevron-down icon-white"></i>
+                            </div>
+
+                        </div>
                         <!--Well puts the informaton into a well of depth in the page-->
                         <div class="well span9">
                             <h4 class="well-title">
