--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -83,13 +83,12 @@
                                 {{session.name}}
                             </h4>
                             <h6 style="margin-top:-10px;">{{session.creatorName}}</h6>
-                            <span>Duration: {{session.duration}}</span>
+                            <span>Duration: {{session.duration | durations }}</span>
                             <p>{{session.abstract}}</p>
                         </div>
                     </div>
                 </li>
             </ul>
-
 
         </div>
 
@@ -101,6 +100,7 @@
     <script src="/lib/angular/angular.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controllers/EventController.js"></script>
+    <script src="/js/filters.js"></script>
 
 </body>
 </html>
